--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2"
   },
   "description": "This is a validated registration form using vanilla JS, node, express, and ejs.",
   "main": "app.js",
