--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "alert": "^5.0.10",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -31,7 +32,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "twilio": "^4.9.0"
   },
   "description": "This is a validated registration form using vanilla JS, node, express, and ejs.",
   "main": "app.js",
