--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.7",
     "ejs-lint": "^1.2.2",
     "express": "^4.16.4",
+    "express-app-generator": "^1.0.6",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "http-errors": "^1.6.3",
