upload images for services

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /node_modules
 /.env
 /config/mongo.js
-/config/config.js
+/config/config*
+/config/copy*
 /config/dbSetup.js
 /config/db.js
 /config/app.json
