--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "W2 Marketing MEVN App",
+  "name": "W2_Marketing_MEVN_App",
   "version": "1.1.0",
   "private": true,
   "scripts": {
