ejs error checking

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
+    "three-gltf-loader": "^1.111.0",
     "twilio": "^4.9.0"
   },
   "description": "This is a validated registration form using vanilla JS, node, express, and ejs.",
