pkg json naming error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "W2_Marketing_MEVN_App",
+  "name": "w2_marketing_mevn_app",
   "version": "1.1.1",
   "private": true,
   "scripts": {
