--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
-    "ejs": "^3.1.7",
+    "ejs": "^3.1.9",
     "ejs-lint": "^1.2.2",
     "express": "^4.16.4",
     "express-app-generator": "^1.0.6",
@@ -29,6 +29,7 @@
     "mongoose": "^5.13.15",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
