--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 /public/images/services
 public/images/blog/background.png
 /public/images/logoW2.png
-
+/public/images/background.png
+/public/images/logoW2.png
 /uploads
 /google52e38ec3d70db39d.html
 /paste.txt
