--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "http-errors": "^1.6.3",
     "joi": "^17.9.1",
     "logger": "0.0.1",
-    "mongodb": "^4.5.0",
+    "mongodb": "4.5",
     "mongoose": "^5.13.15",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
